@@ -2,5 +2,6 @@
 --add-opens java.base/java.lang.reflect=ALL-UNNAMED
 --add-opens java.base/java.text=ALL-UNNAMED
 --add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.desktop/java.awt.font=ALL-UNNAMED
 --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
 --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
